--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             
             <p id="extra-message" style="display:none; color: #d63384; font-weight: bold;">
-    09623937468 ang number, palihog lang ko ha : 
+    09623937468 ANG NUMBER, SENDA KOG 200 TE FLS :> : 
 </p>
         </div>
     </div>
